# vlab4mic-jupyter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  makefile  pyproject.toml
.github/workflows/: oncall_test.yml
src/mypackage/: my_package.py
src/vlab4mic-jupyter/: _experiment_parameters.py  _experiment_visualisation.py  _widget_generator.py  experiment_widgets.py
src/vlab4micjupyter/: __init__.py  _experiment_parameters.py  _experiment_visualisation.py  sweep_parameters_widgets.py
src/vlabjupyter/: _experiment_parameters.py  _experiment_visualisation.py  sweep_parameters_widgets.py
tests/: test_MyClass.py
tests/notebooks/: test_vlabjupyter.ipynb
