[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mypackage"
version = "0.1.0"
description = "My python package"
authors = [
    { name = "Damian Martinez", email = "example_email_123@example.server.com" }
]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">= 3.9"
dependencies = []

[project.optional-dependencies]
all = ["mypackage[dev, test]"]
dev = [
    "pre-commit>=3.7.0",
    "ipykernel>=6.29.4",
    "ruff>=0.4.3",
    "gptrepo>=1.0.3",
    "pdoc>=12.3.1",
    "build",
    "gptrepo"
]
test = [
    "pytest>=8.2.0",
    "pytest-xdist>=3.6.1",
    "pytest-cov>=5.0.0",
    "nbmake>=1.5.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]